--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "xyz.phyoekhant.myanmarattractions"
+        applicationId "xyz.phyoekhant.joketeller"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
@@ -24,7 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
-    compile 'com.android.support:support-v4:24.0.0'
 
     //parser for json data
     compile 'com.google.code.gson:gson:2.4'
